src/objects/Iteration__c.object
<CustomObject>
    <description>An iteration of the K-Mean algorithm in the Clustering Run</description>
    <fields>
        <fullName>Centroid_Matrix__c</fullName>
        <description>The Matrix of our centroids.</description>
        <label>Centroid Matrix</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clustering_Run__c</fullName>
        <description>The clustering run that this iteration of the algorithm belongs to.</description>
        <label>Clustering Run</label>
        <referenceTo>Clustering_Run__c</referenceTo>
        <relationshipLabel>Iterations</relationshipLabel>
        <relationshipName>Iterations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Id_Assignments__c</fullName>
        <label>Id Assignments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Sequence of the Iteration</description>
        <label>Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Iteration</label>
    <nameField>
        <label>Iteration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>